<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">




    <item android:id="@+id/action_capture_image"
          android:title="@string/action_capture_image"
          app:showAsAction="never"/>
    <item android:id="@+id/action_capture_audio"
          android:title="@string/action_capture_audio"
          android:orderInCategory="100"

          app:showAsAction="never"/>

    <item android:id="@+id/action_capture_video"
          android:title="@string/action_capture_video"
          android:orderInCategory="100"
          app:showAsAction="never"/>


    <item android:id="@+id/action_capture_text"
          android:title="@string/action_capture_text"
          android:orderInCategory="100"
          app:showAsAction="never"/>

    <item android:id="@+id/action_upload"
          android:title="Upload"
          android:orderInCategory="100"
          app:showAsAction="never"/>


    <item android:id="@+id/action_zip_json"
        android:title="Zip"
        android:orderInCategory="100"
        app:showAsAction="never"/>



    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_search"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_logout"
        android:title="Logout"
        android:orderInCategory="100"
        android:visible="true"
        app:showAsAction="never" />

    <item android:id="@+id/action_settings"
        android:title="Settings"
        android:orderInCategory="100"
        android:visible="true"
        app:showAsAction="never" />


</menu>
